# activity

./: CMakeCache.txt  CMakeLists.txt  Makefile  activity1  cmake_install.cmake
demos/: test_readDir.cpp  test_reader.cpp  test_train.cpp
demos/Datasets/test/running/: run 100m_WAIST_1_陈国锋_1.csv  run 100m_WAIST_1_陈泽涛_1.csv
demos/Datasets/test/walking/: walking 50m_WAIST_1_陈国锋_1.csv  walking 50m_WAIST_1_陈泽涛_1.csv
demos/Datasets/train/running/: run 100m_WAIST_1_蔡依晖_1.csv  run 100m_WAIST_1_蔡依晖_2.csv  run 100m_WAIST_1_陈佳_1.csv  run 100m_WAIST_1_陈佳_2.csv  run 100m_WAIST_1_陈国锋_2.csv  run 100m_WAIST_1_陈昌运_1.csv  run 100m_WAIST_1_陈昌运_2.csv
demos/Datasets/train/walking/: walking 50m_WAIST_1_蔡依晖_1.csv  walking 50m_WAIST_1_蔡依晖_2.csv  walking 50m_WAIST_1_陈佳_1.csv  walking 50m_WAIST_1_陈佳_2.csv  walking 50m_WAIST_1_陈国锋_2.csv  walking 50m_WAIST_1_陈昌运_1.csv  walking 50m_WAIST_1_陈昌运_2.csv
include/ActivityRecognition/: ActivityRecognition.h  Classfier.h  DataProc.h  DataReader.h  FeatureAnalyse.h  FeatureExtractor.h  globaltype.h
src/: .Classfier.cpp.swp  ActivityRecognition.cpp  Classfier.cpp  DataProc.cpp  DataReader.cpp  FeatureAnalyse.cpp  FeatureExtractor.cpp
